--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ console/
 
 # Ignore .env files as they are personal
 /.env
+
+
+# Ignore mounts
+web/files
+tmp
+private
+.drush
+drush-backups
+.console
