--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -127,7 +127,7 @@ web:
                     scripts: false
 
         # The files directory has its own special configuration rules.
-        '/sites/default/files':
+        '/files':
             # Allow access to all files in the public files directory.
             allow: true
             expires: 5m
