--- a/.lando.upstream.yml
+++ b/.lando.upstream.yml
@@ -7,7 +7,7 @@
 
 # These both allow you to test this template without needing a site on Platform.sh
 # However you will want to replace them in your .lando.yml
-name: platformsh-drupal8-multisite
+name: platformsh-drupal8
 recipe: platformsh
 
 config:
@@ -29,6 +29,4 @@ config:
 # These are tools that are commonly used during development for this template.
 tooling:
   drush:
-    service: app
-  drupal:
     service: app
