--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -5,7 +5,7 @@
 
 "https://first.{default}/":
     type: upstream
-    upstream: "app:http"
+    upstream: "drupal:http"
     cache:
         enabled: true
         # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
@@ -13,8 +13,21 @@
 
 "https://second.{default}/":
     type: upstream
-    upstream: "app:http"
+    upstream: "drupal:http"
     cache:
         enabled: true
         # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
         cookies: ['/^SS?ESS/', '/^Drupal.visitor/']
+
+"https://main.{default}/":
+    type: upstream
+    upstream: "drupal:http"
+    primary: true
+    cache:
+        enabled: true
+        # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
+        cookies: ['/^SS?ESS/', '/^Drupal.visitor/']
+
+"https://{default}/":
+    type: redirect
+    to: "https://main.{default}/"
